# Drareni-Calibration-Algorithm-for-Line-Scan-Camera

./: LICENSE  README.md
Calib_2d/: CMakeCache.txt  CMakeLists.txt  Calib_2d  Calib_2d.cbp  Calib_@d.cbp  Makefile  calibration.cpp  calibration.h  cmake_install.cmake  intro_Drareni线阵相机标定算法的实现及测试.pptx  main.cpp
Calib_2d/data/: calibration_result.txt  chessboard_lsc6.txt  chessboard_lsc6_cutPartly.txt  chessboard_test1.txt  chessboard_test2.txt  cornerPoints_chessboard12.txt  cornerPoints_chessboard13.txt  cornerPoints_chessboard2.txt  cornerPoints_chessboard3.txt  cornerPoints_chessboard9.txt  cornerPoints_chessboard_lsc5.txt  cornerPoints_chessboard_lsc6.txt  cornerPoints_chessboard_lsc6_cutPartly.txt  cornerPoints_chessboard_test.txt  cornerPoints_lineScanImage.txt  cornerPoints_lineScanImage2.txt  data1.txt  data2.txt  data3.txt  extrinsic.yml  extrinsic_pnp.yml  intrinsic.yml  readme.txt  testPoints_for_task3.txt  tsk4_testPoints_Robot.txt  tsk4_testPoints_Robot2.txt  tsk5_objectToBeGrasped.txt  tsk5_objectToBeGrasped2.txt  tst1_image_points_norm.txt  tst1_worldTransToImage_points_norm.txt  tst2_imageTransToWorld_points_norm.txt  tst2_world_points_norm.txt
Calib_2d/data/calibrationData/: extrinsic.yml  extrinsic_pnp.yml  imageToWorld.yml  intrinsic.yml  worldToRobot.yml
